# project_pytest_10.2

./: README.md  pyproject.toml
src/: masks.py  processing.py  widget.py
tests/: conftest.py  test_masks.py  test_processing.py  test_widget.py
